refactor and add tests.